--- a/index.html
+++ b/index.html
@@ -15,32 +15,46 @@
             <div class="col-md-4">
                 <div class="card shadow">
                     <div class="card-body text-center">
-                        <h2 class="card-title mb-4">Wayru Reward Tracker</h2>
+                        <h2 class="card-title mb-4">
+                            Reward Tracker 
+                            <i 
+                                class="bi bi-info-circle text-primary ms-2" 
+                                role="button" 
+                                onclick="toggleInfo()" 
+                                title="Click for more info"
+                                style="font-size: 0.55em;">
+                            </i>
+                        </h2>
+                        <!-- Info section (hidden by default) -->
+                        <div id="infoSection" class="alert alert-info d-none mt-3" role="alert">
+                            This tool allows Wayru operators to estimate their daily rewards based on their uptime and total rewards. It helps you track performance and better understand how uptime impacts earnings. 
+                            Future updates will include historical data tracking and reward trends for enhanced functionality.
+                        </div>
                         <form id="rewardForm">
                             <div class="mb-3">
                                 <label for="uptime" class="form-label">Uptime (%)</label>
                                 <input type="number" id="uptime" class="form-control" 
                                     placeholder="Enter uptime" min="0" max="100" required>
-                                    <small id="uptimeError" class="text-danger d-none">Uptime must be between 0 and 100.</small>
+                                <small id="uptimeError" class="text-danger d-none">Uptime must be between 0 and 100.</small>
                             </div>
                             <div class="mb-3">
                                 <label for="rewards" class="form-label">Total Rewards</label>
                                 <input type="number" id="rewards" class="form-control" 
                                     placeholder="Enter rewards earned" required>
-                                    <small id="rewardsError" class="text-danger d-none">Rewards cannot be negative.</small>
+                                <small id="rewardsError" class="text-danger d-none">Rewards cannot be negative.</small>
                             </div>
                             <div class="mt-4">
                                 <div class="d-grid">
-                                <button type="button" class="btn btn-primary w-100 mb-3" 
-                                onclick="calculateScore()">Calculate Score</button>
+                                    <button type="button" class="btn btn-primary w-100 mb-3" 
+                                    onclick="calculateScore()">Calculate Score</button>
                                 </div>
                                 <div class="d-grid">
-                                <button type="button" class="btn btn-outline-secondary w-100" 
-                                onclick="resetForm()">Reset</button>
+                                    <button type="button" class="btn btn-outline-secondary w-100" 
+                                    onclick="resetForm()">Reset</button>
                                 </div>
                             </div>
                         </form>
-                        <p class="mt-4 text-danger" id="result"></p>
+                        <p class="mt-4 text-muted" id="result"></p>
                     </div>
                 </div>
             </div>
@@ -50,6 +64,10 @@
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     </script>
+    <!-- Include Bootstrap Icons -->
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" 
+        rel="stylesheet">
     <!-- Link to Script -->
     <script src="script.js"></script>
 </body>
