--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wayru Reward Tracker</title>
+    <title>Reward Tracker</title>
     <!-- Include Bootstrap CSS -->
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
@@ -15,6 +15,22 @@
             <div class="col-md-4">
                 <div class="card shadow">
                     <div class="card-body text-center">
+
+                         <div class="dropdown mb-3 dropstart text-end">
+                            <button
+                                class="btn"
+                                type="button"
+                                id="menuButton"
+                                data-bs-toggle="dropdown"
+                                aria-expanded="false"
+                                style="border: none; background: transparent; padding: 0;">
+                                <i class="bi bi-list" style="font-size: 1.8em;"></i>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="menuButton">
+                                <li><a class="dropdown-item" href="index.html">Home</a></li>
+                                <li><a class="dropdown-item" href="community-feedback.html">Community</a></li>
+                            </ul>
+                        </div>
                         <h2 class="card-title mb-4">
                             Reward Tracker 
                             <i 
@@ -44,16 +60,12 @@
                                 <small id="rewardsError" class="text-danger d-none">Rewards cannot be negative.</small>
                             </div>
                             <div class="mt-4">
-                                <div class="d-grid">
-                                    <button type="button" class="btn btn-primary w-100 mb-3" 
-                                    onclick="calculateScore()">Calculate Score</button>
-                                </div>
-                                <div class="d-grid">
-                                    <button type="button" class="btn btn-outline-secondary w-100" 
-                                    onclick="resetForm()">Reset</button>
-                                </div>
+                                <button type="button" class="btn btn-primary w-100 mb-3" 
+                                onclick="calculateScore()">Calculate Score</button>
+                                <button type="button" class="btn btn-outline-secondary w-100" 
+                                onclick="resetForm()">Reset</button>
                             </div>
-                        </form>
+                        </form>                         
                         <p class="mt-4 text-muted" id="result"></p>
                     </div>
                 </div>
